rota de teste implementada
